rust/macros/tests/invalid/target/debug/deps/two_arrows-6fd9ef88842678fe.d
/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/two_arrows-6fd9ef88842678fe.d: two_arrows.rs Cargo.toml

/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/libtwo_arrows-6fd9ef88842678fe.rmeta: two_arrows.rs Cargo.toml

two_arrows.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
